cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Robert
maintainer:         robert.cram@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable aoc2023
    main-is:          Main.hs

    ghc-options:      -Wincomplete-patterns -fno-ignore-asserts -fprof-auto -rtsopts

    -- Modules included in this executable, other than Main.
    other-modules: 
        AOC.AOC 
        Day01.Day01 
        Day02.Day02 

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    text, matrix, time, ReadArgs, ghc, split, directory, containers, command, base ^>=4.16.4.0
    hs-source-dirs:   app src
    default-language: Haskell2010
